Fixed desktop Safari interaction delay as described in #122 and made move hover animation more visible. Added BeagleBone init script commands to save a backup of the microSD card files to board memory.

--- a/web/game.css
+++ b/web/game.css
@@ -255,7 +255,8 @@ a:link, a:visited {
 .chesssquare {
     border: thin solid rgb(200,185,145);
     position: relative;
-    transition: 0.05s opacity;
+    transition: 0.15s opacity;
+    will-change: opacity;
 }
 
 .hover {
